tests/regression/error/hw4_error26.sml
val prog =
  PROGRAM {classes=[],decls=[],funcs=[],stmts=[ST_EXP {exp=EXP_ID "a"}]}
  : program
;
